[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jhonatas Souza <jhonatasbs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
opencv-python = "^4.6.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
